[package]
name = "serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
warp = "0.3.7"
serde = { version = "1.0.214", features = ["derive"] }
sled = "0.34.7"
wasmtime = "26.0.0"

[lib]
name = "serverless"
path = "src/lib.rs"